# task-management-tool

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
api/api/: app_factory.py  root.py
api/api/auth/: exception_handlers.py  router.py
api/api/common/: exception_handlers.py
api/api/project/: exception_handlers.py  router.py  schema.py
api/api/task/: exception_handlers.py  router.py  schema.py
api/api/user/: exception_handlers.py  router.py  schema.py
api/api/utils/: __init__.py  exception_handler.py
api/tests/auth/: steps.py  test_auth_endpoints.py  test_auth_login.py
api/tests/task/: conftest.py  steps.py  test_task.py
backend/: ioc_container.py
backend/auth/: __init__.py  ioc_containers.py
backend/common/: __init__.py  logger_config.py
backend/common/domain/: entity.py  event_bus.py  exceptions.py  validation_service.py
backend/common/infrastructure/: base.py  db.py  db_events.py  db_models.py  db_tabels.py  db_tables.py  db_test.py
backend/project/: __init__.py  ioc_containers.py
backend/project/tests/: conftest.py  steps.py  test_project_complete.py  test_project_create.py  test_project_delete.py  test_project_get.py  test_project_link.py  test_project_update.py
backend/task/: __init__.py  ioc_containers.py
backend/task/tests/: conftest.py  steps.py  test_deadline_checker.py  test_task_assignement.py  test_task_create.py  test_task_delete.py  test_task_get.py  test_task_update.py
backend/user/: __init__.py  ioc_containers.py
(+32 files in other folders)
