[tool.poetry]
name = "task-management-tool"
version = "0.1.0"
description = ""
authors = ["veNNNx"]

readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"

fastapi = ">=0.116.1,<0.117.0"
dependency-injector = ">=4.48.1,<5.0.0"
logging = ">=0.4.9.6,<0.5.0.0"
attrs = ">=25.3.0,<26.0.0"
sqlalchemy = ">=2.0.42,<3.0.0"
pytest = ">=8.4.1,<9.0.0"
pydantic = {extras = ["email"], version = "^2.11.10"}
pydantic-settings = ">=2.10.1,<3.0.0"
databases = ">=0.9.0,<0.10.0"
pre-commit = ">=4.2.0,<5.0.0"
mypy = ">=1.17.1,<2.0.0"
ruff = ">=0.12.7,<0.13.0"
types-assertpy = ">=1.1.0.20250502,<2.0.0.0"
gitlint = ">=0.19.1,<0.20.0"
httpx = "^0.28.1"
assertpy = "^1.1"
uvicorn = "^0.35.0"
aiosqlite = "^0.21.0"
pytest-cov = "^6.3.0"
bcrypt = "^5.0.0"
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
